--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Unipath==1.0
 argparse==1.2.1
 django-bootstrap-form==3.1
 django-debug-toolbar==1.0.1
+djangorestframework==2.3.13
 sqlparse==0.1.11
 wsgiref==0.1.2
 xmltodict==0.8.6
