--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-bootstrap-form==3.1
 django-debug-toolbar==1.0.1
 django-extensions==1.3.3
 djangorestframework==2.3.13
+factory-boy==2.3.1
 pyparsing==2.0.1
 six==1.6.1
 sqlparse==0.1.11
