--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ django-bootstrap-form==3.1
 django-debug-toolbar==1.0.1
 django-extensions==1.3.3
 djangorestframework==2.3.13
+pygraphviz==1.2
 pyparsing==2.0.1
+pytz==2014.2
 six==1.6.1
 sqlparse==0.1.11
 wsgiref==0.1.2
