--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ argparse==1.2.1
 django-bootstrap-form==3.1
 django-debug-toolbar==1.0.1
 django-extensions==1.3.3
+django-widget-tweaks==1.3
 djangorestframework==2.3.13
 pygraphviz==1.2
 pyparsing==2.0.1
@@ -13,4 +14,3 @@ six==1.6.1
 sqlparse==0.1.11
 wsgiref==0.1.2
 xmltodict==0.8.6
-
