--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-extensions==1.3.3
 django-widget-tweaks==1.3
 djangorestframework==2.3.13
 pyparsing==2.0.1
+python-dateutil==2.2
 pytz==2014.2
 six==1.6.1
 sqlparse==0.1.11
