--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-extensions==1.3.3
 django-multiforloop==0.2.1
 django-widget-tweaks==1.3
 djangorestframework==2.3.13
+factory-boy==2.3.1
 ipdb==0.8
 ipython==1.2.1
 pyparsing==2.0.1
