--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ django-bootstrap-form==3.1
 django-debug-toolbar==1.0.1
 django-extensions==1.3.3
 django-multiforloop==0.2.1
--e git+git://github.com/bsavelev/django-turbolinks.git
+-e git://github.com/bsavelev/django-turbolinks.git#egg=django-turbolinks
 django-widget-tweaks==1.3
 djangorestframework==2.3.13
 factory-boy==2.3.1
